<resources>
    <string name="app_name">RemZin</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="current_task">Current</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_editing_title">Editing task</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_remove">Remove</string>
    <string name="dialog_removing_message">Delete task?</string>
    <string name="dialog_title">Adding task</string>
    <string name="do_not_show_splash">Dont show splash</string>
    <string name="done_task">Done</string>
    <string name="removed">Removed</string>
    <string name="separator_future">Future</string>
    <string name="separator_overdue">Overdue</string>
    <string name="separator_today">Today</string>
    <string name="separator_tomorrow">Tomorrow</string>
    <string name="task_date">Date</string>
    <string name="task_time">Time</string>
    <string name="task_title">Title</string>
    <string name="task_text">Text</string>

    <string name="notifi_title">Reminder</string>
    <string name="notifi_btn_view">View</string>
    <string name="notifi_btn_close">Close</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_display_vibrate_text">Active vibratet</string>
    <string name="pref_title_vibrate_choose">Shoose vibrate</string>
    <string name="pref_title_vibrate_listen_choose">Listen and choose vibrate</string>
    <string name="pref_style1_vibrate">Style 1 (0.5sec)</string>
    <string name="pref_style2_vibrate">Style 2 (1sec)</string>
    <string name="pref_style3_vibrate">Style 3 (1.5sec)</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_display_ringtone_text">Active ringtone</string>
    <string name="pref_title_ringtone_choose">Shoose ringtone</string>
    <string name="pref_title_ringtone_listen_choose">Listen and choose ringtone</string>
    <string name="pref_style1_ringtone">Ringtone 1</string>
    <string name="pref_style2_ringtone">Ringtone 2</string>
    <string name="pref_style3_ringtone">Ringtone 3</string>
    <string name="pref_style4_ringtone">Ringtone 4</string>
    <string name="pref_style5_ringtone">Ringtone 5</string>

    <string name="pref_title_notification">Notification</string>
    <string name="pref_long_notification">Notification</string>
    <string name="pref_long_or_short_notification">Notification long or short text</string>
    <string name="rington_volume"> To specify the volume level of the ringtone</string>
    <string name="title_dialog_icon">To choose the icon</string>

</resources>
