<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="15dp"
    android:weightSum="10">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Выбрать стиль вибрации"
        android:textColor="@color/colorAccent"
        android:textSize="18dp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rbtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/pref_style1_vibrate"
            android:textColor="@color/colorAccent"
            android:textSize="18dp"
            android:textStyle="bold"
            android:padding="15dp"
            android:gravity="center_vertical|right" />

        <RadioButton
            android:id="@+id/rbtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_style2_vibrate"
            android:textColor="@color/colorAccent"
            android:textSize="18dp"
            android:textStyle="bold"
            android:padding="15dp"
            android:gravity="center_vertical|right" />

        <RadioButton
            android:id="@+id/rbtn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_style3_vibrate"
            android:textColor="@color/colorAccent"
            android:textSize="18dp"
            android:textStyle="bold"
            android:padding="15dp"
            android:gravity="center_vertical|right" />
    </RadioGroup>

    <!--<Button-->
    <!--android:id="@+id/btn_vibrate_test"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="right"-->
    <!--android:text="@string/pref_btn_vibrate"></Button>-->

</LinearLayout>