<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_red"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.megatron.remzin.ActivityNotification">

    <ImageView
        android:id="@+id/img_notification"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_above="@+id/notifi_title"
        android:src="@drawable/ic_image_btn" />

    <TextView
        android:id="@+id/text_title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/notifi_title"
        android:textColor="@color/colorAccent"
        android:textSize="24dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/notifi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_title_main"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorAccent"
        android:textSize="18dp"
        android:textStyle="bold"
        tools:text="Small Text" />

    <TextView
        android:id="@+id/notifi_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_below="@+id/notifi_title"
        android:paddingTop="10dp"
        android:textColor="@color/colorAccent"
        tools:text="New Text" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notifi_text"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/fon_green"
            android:text="@string/notifi_btn_view"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/fon_red_btn"
            android:text="@string/notifi_btn_close"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
